Dodanie pola opisu do taska

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,4 +7,8 @@ block content
     br
     input(type="text" id="title" name="title")
     br
+    label(for="desc")
+      | Opis
+    br
+    input(type="text" id="desc" name="description")
     input(type="submit", value="Dodaj")
