Dodanie pola opisu do taska

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,5 +10,5 @@ block content
     label(for="desc")
       | Opis
     br
-    input(type="text" id="desc" name="description")
+    input(type="text" id="desc" name="desc")
     input(type="submit", value="Dodaj")
