Dodano wyswietlanie listy zadan

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,3 +12,9 @@ block content
     br
     input(type="text" id="desc" name="desc")
     input(type="submit", value="Dodaj")
+    table
+      tr
+        th(scope="col") Tytuł
+      each task in tasks
+        tr
+          td= task.title
