--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,8 @@ block content
     table
       tr
         th(scope="col") Tytuł
+        th(scope="col") Opis
       each task in tasks
         tr
           td= task.title
+          td= task.desc
