--- a/views/index.pug
+++ b/views/index.pug
@@ -17,17 +17,15 @@ block content
         th(scope="col") Tytuł
         th(scope="col") Opis
         th(scope="col") Data modyfikacji
+        th(scope= "col") Status
         th(scope= "col") Akcje
       each task in tasks
         tr
           td= task.title
           td= task.desc
           td= task.Timestamp
-      each task in tasks
-        tr
-        td= task.title
-        td= (task.status == 'completed' ? 'Zakończone' : 'Otwarte')
-        td
-          button(type="button" onclick=`updateTaskStatus('${task.id}', 'completed')`) ✓
+          td= (task.status == 'completed' ? 'Zakończone' : 'Otwarte')
+          td
+            button(type="button" onclick=`updateTaskStatus('${task.id}', 'completed')`)  ✓
 block scripts
   script(src="javascripts/index.js")
